# grafana-tempo-rust-demo

./: README.md  README.org  docker-compose.yaml
conf/: grafana-datasources.yaml  prometheus.yaml  tempo.yaml
uservice1/: Cargo.toml
uservice1/src/: main.rs
uservice2/: Cargo.toml  Dockerfile
uservice2/src/: main.rs
uservice3/: Cargo.toml  Dockerfile  hello-world.html
uservice3/src/: main.rs
uservice4/: .dockerignore  Cargo.toml
uservice4/src/: main.rs
