[package]
name = "uservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "tcp"] }
opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"
opentelemetry-jaeger = "0.17.0"
opentelemetry-otlp = "0.11.0"
rand = "0.8.5"
tokio = { version = "1.19.1", features = ["macros", "rt-multi-thread"] }
